frontend_tests/negative/builtin_clear_operand/go.mod
module example.com/renvotests/negative/builtin_clear_operand

go 1.25
